--- a/style.css
+++ b/style.css
@@ -18,15 +18,78 @@
 }
 
 body{
+    font-family:'Helvetica Neue';
     background: var(--background);
+    height: 100vh;
+    display: grid;
+    place-content: center;
 }
 
 canvas{
     border: 4px solid var(--button);
     border-radius: 8px;
     background: var(--main);
+    margin-bottom: 30px;
 }
 
 .buttons{
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    width: 150px;
+    min-width: 100px;
+    gap: 6px;
+}
+
+.horiz{
+    display: flex;
+    margin: 0 auto;
+    width: 150px;
+    min-width: 100px;
+    gap: 6px;
+    align-items: center;
+    justify-content: center;
+}
+
+#left, #right{
+    display: flex;
+    width: 100%;
+}
+
+.buttons button{
+    border:none;
+    border-radius: 1em;
+    padding: 4px 14px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.3s ease all;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.buttons button:hover{
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    background-color: var(--secundary);
+}
+
+/* .infoGame{
+    width: 200px;
+    background-color: var(--complementary);
+    border: 2px solid var(--button);
+    padding: 8px;
+    border-radius: 8px;
+    min-height: 100px;
+    margin-top: 30px;
+} */
+
+p{
+    margin-top: 30px;
+    color: var(--white);
+    font-size: 14px;
+    letter-spacing: 1.2px;
+    font-weight: 500;
 }
